# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 1.9.2 ==
  * wimax-enable.php should not check for certificates (#689)

== 1.9.1 ==
  * GMOC reporting fix (#688)

== 1.9 ==
  * load balancing pgch (#650)
  * WiMAX integration (#484)
  * Extend default and max slice expiration (#636)
  * Verify OpenID username (#289)
  * Improve OpenID page flow (#288)
  * Fix call(s) to modify_project_membership in pa_client.php (#665)
  * Move cainfo.html (#642)
  * Fix OpenID for GIMI (#661)
  * Add pa_project_attribute table (#656)
  * Allow for download public SSH key (#655)
  * undefined variables in amstatus with am_id (#648)
  * Login information is wrong in multi-user slices (#645)
  * Save error Omni results (#444)
  * Fix sa_url in tool-omniconfig.php (#643)
  * Fix warnings in gemini.php (#641)
  * Fix link to SignMeUp (#653)
  * Include email address in account change request emails (#626)
  * Check permissions and remove dead code in do-edit-project (#666)
  * SA/PA merge including... (#540)
     - Ensure SA/PA methods all have guards or we warn why not
     - Hide Update Project button if user not permitted
  * CS logs if it authorizes an action only cause you are an operator (#397)
  * Apply guards to more SA and PA methods (requires CS update-5.sql) (#502)
  * Remove a debug printout in rspec upload (#663)
  * Warn about project lead policy (#630)
  * Fix path bitrot in GMOC slice reporting (#669)
  * Clean up bulk invite email (#529)
  * Handle names with commas when sending email (#629)
  * Handle various newlines in bulk add file (#584)
  * Emails from experimenter bounce back to experimenter. (#409)
  * Check user entered emails - both sanitize and validate them. Warn
  experimenter about any that are skipped. See EG invite-to-project,
  invite-to-geni, ask-for-project. (#409)
  * Pages that take a bunch of emails clarify how to separate